--- a/OpenerApp/Cargo.toml
+++ b/OpenerApp/Cargo.toml
@@ -10,4 +10,4 @@ macroquad = "0.4.4"
 resvg = "0.28.0"
 serialport = "4.3.0"
 nfc1 = { version = "0.5.2", default-features=false, features = [ ] }
-# nfc1 = "0.5.2"
+rs_ws281x = { git = "https://github.com/FizzyApple12/rpi-ws281x-rust.git" }
