--- a/OpenerApp/Cargo.toml
+++ b/OpenerApp/Cargo.toml
@@ -9,5 +9,7 @@ edition = "2021"
 macroquad = "0.4.4"
 resvg = "0.28.0"
 serialport = "4.3.0"
-nfc1 = { version = "0.5.2", default-features=false, features = [ ] }
-rs_ws281x = { git = "https://github.com/FizzyApple12/rpi-ws281x-rust.git" }
+# nfc1 = { version = "0.5.2", default-features=false, features = [ ] }
+pn532 = { version = "0.3.2", features = ["std"] }
+# rs_ws281x = { git = "https://github.com/FizzyApple12/rpi-ws281x-rust.git" }
+reqwest = { version = "0.11", features = ["blocking", "json"] }
