--- a/OpenerApp/.vscode/settings.json
+++ b/OpenerApp/.vscode/settings.json
@@ -1,3 +1,3 @@
-{
-    "rust-analyzer.cargo.target": "armv7-unknown-linux-gnueabihf"
-}
+// {
+//     "rust-analyzer.cargo.target": "armv7-unknown-linux-gnueabihf"
+// }
