--- a/OpenerApp/Cargo.toml
+++ b/OpenerApp/Cargo.toml
@@ -13,8 +13,8 @@ serialport = "4.3.0"
 # pn532 = { version = "0.3.2", features = ["std"] }
 # pn532 = { version = "0.3.2", features = ["msb-spi"] }
 pn532 = "0.3.2"
-rppal = { version = "0.17.1", features = ["hal"] }
-#spidev = "0.6.0" 
+#rppal = { version = "0.17.1", features = ["hal"] }
+spidev = "0.6.0" 
 embedded-hal = "0.2.6"
 linux-embedded-hal = "0.3.2"
 # rs_ws281x = { git = "https://github.com/FizzyApple12/rpi-ws281x-rust.git" }
