--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,7 @@ nfc1 = { version = "0.5.2", default-features=false, features = [ ] }
 # linux-embedded-hal = "0.3.2"
 # rs_ws281x = { git = "https://github.com/FizzyApple12/rpi-ws281x-rust.git" }
 reqwest = { version = "0.11", features = ["blocking", "json"] }
+
+[target.'cfg(windows)'.dependencies]
+# libnfc is not available on vcpkg, must use `vendored` feature
+nfc1 = { version = "0.5.2" }
