--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ nfc1 = { git = "https://github.com/ericswpark/rs-nfc1.git", branch = "nfc1-sys-p
 # linux-embedded-hal = "0.3.2"
 # rs_ws281x = { git = "https://github.com/FizzyApple12/rpi-ws281x-rust.git" }
 reqwest = { version = "0.11", features = ["blocking", "json"] }
+thiserror = "2.0.17"
 
 [target.'cfg(windows)'.dependencies]
 # libnfc is not available on vcpkg, must use `vendored` feature
