build(deps): lock macroquad to 0.4.4 for now
Between 0.4.4 and the latest version (0.4.14), UniformDesc was
introduced and we need to move to that.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-macroquad = "0.4.4"
+macroquad = "=0.4.4"
 resvg = "0.28.0"
 serialport = "4.3.0"
 nfc1 = { version = "0.5.2", default-features=false, features = [ ] }
