--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Install system library dependencies
-      run: sudo apt-get update && sudo apt-get install -y libudev-dev
+      run: sudo apt-get update && sudo apt-get install -y libudev-dev libnfc-dev
     - name: Build
       run: cargo build --verbose
     - name: Run tests
