--- a/Cross.toml
+++ b/Cross.toml
@@ -1,5 +1,2 @@
 [target.aarch64-unknown-linux-gnu]
-pre-build = [
-    "dpkg --add-architecture $CROSS_DEB_ARCH",
-    "apt-get update && apt-get install -y clang libudev-dev libnfc-dev libclang-dev"
-]
+dockerfile = "./Dockerfile.aarch64"
