--- a/.github/workflows/aarch64-compile.yml
+++ b/.github/workflows/aarch64-compile.yml
@@ -24,6 +24,6 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v6
       with:
-        name: door-opener
-        path: target/release/door-opener
+        name: openerapp
+        path: target/release/openerapp
         if-no-files-found: error
