--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,10 @@ serialport = "4.8.1"
 nfc1 = { version = "=0.6.0", default-features = false, features = [] }
 reqwest = { version = "0.13.1", features = ["blocking", "json"] }
 tungstenite = { version = "0.28.0", features = ["rustls"] }
-dotenvy = { git = "https://github.com/allan2/dotenvy.git", version = "0.15.7", features = ["macros"], optional = true }
+dotenvy = { git = "https://github.com/allan2/dotenvy.git", features = ["macros"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 
 [target.'cfg(windows)'.dependencies]
 # libnfc is not available on vcpkg, must use `vendored` feature
 nfc1 = { version = "=0.6.0", default-features=false, features = [ "vendored" ] }
-
-[features]
-dotenvy = ["dep:dotenvy"]
