--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,24 +1,35 @@
-name: Rust build and test
+name: Rust workflow
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
+    paths-ignore:
+      - "**/README.md"
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
+  workflow_dispatch:
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    strategy:
+      fail-fast: false
+      matrix:
+        action:
+          - command: build
+            args: --release
+          - command: fmt
+            args: --all -- --check --color always
+          - command: clippy
+            args: --all-targets --all-features --workspace -- -D warnings
     steps:
-    - uses: actions/checkout@v6
-    - name: Install system library dependencies
-      run: sudo apt-get update && sudo apt-get install -y libudev-dev libnfc-dev
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+      - uses: actions/checkout@v6
+      - name: Install system library dependencies
+        run: sudo apt-get update && sudo apt-get install -y libudev-dev libnfc-dev
+      - name: Enable caching
+        uses: Swatinem/rust-cache@v2
+      - name: Run command
+        run: cargo ${{ matrix.action.command }} ${{ matrix.action.args }}
