--- a/install/opener-app.service
+++ b/install/opener-app.service
@@ -10,6 +10,7 @@ RestartSec=1
 User=root
 Group=root
 ExecStart=startx /home/hackers/.xinitrc
+WorkingDirectory=/home/hackers/door-opener
 
 [Install]
 WantedBy=multi-user.target
