--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ resvg = "0.47.0"
 serialport = "4.8.1"
 nfc1 = { version = "=0.6.0", default-features = false, features = [] }
 reqwest = { version = "0.13.1", features = ["blocking", "json"] }
-tungstenite = { version = "0.28.0", features = ["rustls"] }
+tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
 dotenvy = { git = "https://github.com/allan2/dotenvy.git", features = ["macros"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
