--- a/.github/workflows/aarch64-compile.yml
+++ b/.github/workflows/aarch64-compile.yml
@@ -2,9 +2,9 @@ name: Rust build for aarch64
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
   workflow_dispatch:
 
 env:
@@ -12,18 +12,17 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-24.04-arm
 
     steps:
-    - uses: actions/checkout@v6
-    - name: Install system library dependencies
-      run: sudo apt-get update && sudo apt-get install -y libudev-dev libnfc-dev
-    - name: Build
-      run: cargo build --verbose --release
-    - name: Upload artifact
-      uses: actions/upload-artifact@v6
-      with:
-        name: openerapp
-        path: target/release/openerapp
-        if-no-files-found: error
+      - uses: actions/checkout@v6
+      - name: Install system library dependencies
+        run: sudo apt-get update && sudo apt-get install -y libudev-dev libnfc-dev libdbus-1-dev
+      - name: Build
+        run: cargo build --verbose --release
+      - name: Upload artifact
+        uses: actions/upload-artifact@v6
+        with:
+          name: openerapp
+          path: target/release/openerapp
+          if-no-files-found: error
