--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,13 @@ serde_json = "1.0.149"
 btleplug = "0.11.8"
 uuid = "1.20.0"
 tokio = { version = "1.49.0", features = ["rt", "macros", "rt-multi-thread"] }
+async-trait = "0.1.89"
 
 [target.'cfg(windows)'.dependencies]
 # libnfc is not available on vcpkg, must use `vendored` feature
 nfc1 = { version = "=0.6.0", default-features=false, features = [ "vendored" ] }
+
+[features]
+default = ["ada_pusher"]
+ada_pusher = []
+lx16a = []
