--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ btleplug = "0.11.8"
 uuid = "1.20.0"
 tokio = { version = "1.49.0", features = ["rt", "macros", "rt-multi-thread"] }
 async-trait = "0.1.89"
+semver = "1.0.27"
 
 [target.'cfg(windows)'.dependencies]
 # libnfc is not available on vcpkg, must use `vendored` feature
