--- a/.github/workflows/aarch64-compile.yml
+++ b/.github/workflows/aarch64-compile.yml
@@ -2,9 +2,8 @@ name: Rust build for aarch64
 
 on:
   push:
-    branches: ["main"]
-  pull_request:
-    branches: ["main"]
+    tags:
+      - "*.*.*"
   workflow_dispatch:
 
 env:
