--- a/.github/workflows/aarch64-compile.yml
+++ b/.github/workflows/aarch64-compile.yml
@@ -19,9 +19,9 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y libudev-dev libnfc-dev libdbus-1-dev
       - name: Build
         run: cargo build --verbose --release
-      - name: Upload artifact
-        uses: actions/upload-artifact@v6
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: github.ref_type == 'tag'
         with:
-          name: openerapp
-          path: target/release/openerapp
-          if-no-files-found: error
+          files: |
+            target/release/openerapp
