--- a/.github/workflows/aarch64-compile.yml
+++ b/.github/workflows/aarch64-compile.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - name: Install system library dependencies
-        run: sudo apt-get update && sudo apt-get install -y libudev-dev libnfc-dev libdbus-1-dev
+        run: sudo apt-get update && sudo apt-get install -y libudev-dev libnfc-dev libdbus-1-dev pkg-config
       - name: Add musl target
         run: rustup target add aarch64-unknown-linux-musl
       - name: Build
