--- a/.github/workflows/aarch64-compile.yml
+++ b/.github/workflows/aarch64-compile.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install system library dependencies
         run: sudo apt-get update && sudo apt-get install -y libudev-dev libnfc-dev libdbus-1-dev
       - name: Build
-        run: cargo build --verbose --release --target aarch64-unknown-linux-musl
+        run: cargo build --verbose --release
       - name: Release
         uses: softprops/action-gh-release@v2
         if: github.ref_type == 'tag'
