--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ macroquad = "0.4.14"
 resvg = "0.47.0"
 nfc1 = { version = "=0.6.0", default-features = false, features = [] }
 reqwest = { version = "0.13.1", features = ["blocking", "json"] }
-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
 dotenvy = { git = "https://github.com/allan2/dotenvy.git", features = ["macros"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
@@ -19,6 +18,8 @@ uuid = "1.20.0"
 tokio = { version = "1.49.0", features = ["rt", "macros", "rt-multi-thread"] }
 async-trait = "0.1.89"
 semver = "1.0.27"
+async-tungstenite = { version = "0.33.0", features = ["tokio-runtime", "tokio-rustls-webpki-roots"] }
+futures = "0.3.32"
 
 [target.'cfg(windows)'.dependencies]
 # libnfc is not available on vcpkg, must use `vendored` feature
